# rollingrank

./: .gitmodules  LICENSE  MANIFEST.in  README.md  bench.py  bench_rci.py  example.py  setup.cfg  setup.py
rollingrank/: __init__.py
src/: avl_array.h  rollingrank.cpp
tests/: test_rci.py  test_rollingrank.py
