[metadata]
name = rollingrank
version = 0.2.5
author = Shin Fukuse
description = fast rolling rank for numpy
long_description = file:README.md
long_description_content_type=text/markdown
url = https://github.com/contribu/rollingrank
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    pybind11

[options.packages.find]
exclude =
    tests
